--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
       <h3>Protractor API</h3>
       <ul>
-        <li><a href='./protractor/index.html'>Calculator</a></li>
+        <li><a target="_blank" href='./protractor/index.html'>Calculator</a></li>
       </ul>
 
       <h3>HTML Report</h3>
       <ul>
-        <li><a href='./reportng-report/index.html'>Java - ReportNG</a></li>
-        <li><a href='./extent-report/index.html'>Java - Extent Report</a></li>
-        <li><a href='./cucumber-report/overview-features.html'>Java - Cucumber Report</a></li>
+        <li><a target="_blank" href='./reportng-report/index.html'>Java - ReportNG</a></li>
+        <li><a target="_blank" href='./extent-report/index.html'>Java - Extent Report</a></li>
+        <li><a target="_blank" href='./cucumber-report/overview-features.html'>Java - Cucumber Report</a></li>
       </ul>
 
     </div>
