--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <h3>Protractor API</h3>
       <ul>
-        <li><a target="_blank" href='./protractor/index.html'>Calculator</a></li>
+        <li><a target="_blank" href='./protractor-calculator/index.html'>Calculator</a></li>
       </ul>
 
       <h3>HTML Report</h3>
