--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li><a target="_blank" href='./reportng-report/index.html'>Java - ReportNG</a></li>
         <li><a target="_blank" href='./extent-report/index.html'>Java - Extent Report</a></li>
         <li><a target="_blank" href='./cucumber-report/overview-features.html'>Java - Cucumber Report</a></li>
-        <li><a target="_blank" href='./allure-report/index.html'>Java - Allure Report</a> (Open on Firefox browser)</li>
+        <li><a target="_blank" href='./allure-report/index.html'>Java - Allure Report</a></li>
       </ul>
 
     </div>
