Protractor - Cucumber Reporter

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
       <h3>Protractor HTML Report</h3>
       <ul>
-        <li><a target="_blank" href='./protractor-cucumber/index.html'>Protractor - Cucumber Report</a></li>
+        <li><a target="_blank" href='./protractor-cucumber/index.html'>Protractor - Multiple Cucumber</a></li>
+        <li><a target="_blank" href='./protractor-reporter/index.html'>Protractor - Cucumber Reporter</a></li>
       </ul>
 
     </div>
