Update http to https

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -168,7 +168,7 @@
       <legend>
         <span class="number">4</span>Window</legend>
       <label for="open window">Opening a new window:</label>
-      <a href='http://google.com.vn' , target='_blank'>Click Here</a>
+      <a href='https://google.com.vn' , target='_blank'>Click Here</a>
     </fieldset>
     <fieldset>
       <legend>
