--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -233,6 +233,14 @@
           <a href="http://daominhdam.github.io">View profile</a>
         </div>
       </div>
+
+      <div class="figure">
+        <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80" alt="User Avatar">
+        <div class="figcaption">
+          <h5>Name: User5</h5>
+          <a href="http://daominhdam.github.io">View profile</a>
+        </div>
+      </div>
     </fieldset>
 
     <fieldset>
