--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -249,6 +249,7 @@
       <img src="asdf.jpg" />
       <img src="hjkl.jpg" />
       <img src="gkjh.jpg" />
+      <img src="fjdg.jpg" />
       <img src="https://images.unsplash.com/photo-1497864149936-d3163f0c0f4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" />
     </fieldset>
     <fieldset>
