Add Facebook Tiki Lazada

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -189,7 +189,14 @@
       <legend>
         <span class="number">4</span>Window</legend>
       <label for="open window">Opening a new window:</label>
-      <a href='https://google.com.vn' , target='_blank'>Click Here</a>
+      <a href='https://google.com.vn' , target='_blank'>GOOGLE</a>
+      </br>
+      <a href='https://facebook.com' , target='_blank'>FACEBOOK</a>
+      </br>
+      <a href='https://tiki.vn' , target='_blank'>TIKI</a>
+      </br>
+      <a href='https://lazada.vn' , target='_blank'>LAZADA</a>
+      </br>
     </fieldset>
     <fieldset>
       <legend>
@@ -203,7 +210,9 @@
         <span class="number">6</span>Hover</legend>
       <label for="hover">Hover over the image for additional information</label>
       <div class="figure">
-        <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="User Avatar">
+        <img
+          src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+          alt="User Avatar">
         <div class="figcaption">
           <h5>Name: User1</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -211,7 +220,9 @@
       </div>
 
       <div class="figure">
-        <img src="https://images.unsplash.com/photo-1516542076529-1ea3854896f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2551&q=80" alt="User Avatar">
+        <img
+          src="https://images.unsplash.com/photo-1516542076529-1ea3854896f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2551&q=80"
+          alt="User Avatar">
         <div class="figcaption">
           <h5>Name: User2</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -219,7 +230,9 @@
       </div>
 
       <div class="figure">
-        <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="User Avatar">
+        <img
+          src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+          alt="User Avatar">
         <div class="figcaption">
           <h5>Name: User3</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -227,7 +240,9 @@
       </div>
 
       <div class="figure">
-        <img src="https://images.unsplash.com/photo-1510519138101-570d1dca3d66?ixlib=rb-1.2.1&auto=format&fit=crop&w=1331&q=80" alt="User Avatar">
+        <img
+          src="https://images.unsplash.com/photo-1510519138101-570d1dca3d66?ixlib=rb-1.2.1&auto=format&fit=crop&w=1331&q=80"
+          alt="User Avatar">
         <div class="figcaption">
           <h5>Name: User4</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -235,7 +250,9 @@
       </div>
 
       <div class="figure">
-        <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80" alt="User Avatar">
+        <img
+          src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80"
+          alt="User Avatar">
         <div class="figcaption">
           <h5>Name: User5</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -250,7 +267,8 @@
       <img src="hjkl.jpg" />
       <img src="gkjh.jpg" />
       <img src="fjdg.jpg" />
-      <img src="https://images.unsplash.com/photo-1497864149936-d3163f0c0f4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" />
+      <img
+        src="https://images.unsplash.com/photo-1497864149936-d3163f0c0f4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" />
     </fieldset>
     <fieldset>
       <div class="container">
