Add string method - XPATH

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -48,6 +48,13 @@
         <span class="date"> @04:45 PM </span>
       </h3>
 
+      <h2>
+      <span class='singer'></span>
+      
+            Michael Jackson
+
+      </h2>
+
     </fieldset>
 
     <fieldset>
