--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -4,14 +4,44 @@
   <title>SELENIUM WEBDRIVER FORM DEMO</title>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    table,
+    th,
+    td {
+      border-radius: 3px;
+      padding: 15 15px;
+      justify-content: space-between;
+      margin-bottom: 25px;
+      border: 2px solid #95A5A6;
+      border-collapse: collapse;
+    }
+
+    .figure {
+      float: left;
+      padding-right: 20px;
+    }
+
+    .figcaption {
+      display: none;
+    }
+
+    .figure:hover .figcaption {
+      display: block;
+    }
+
+    img {
+      width: 120px;
+      height: 90px;
+    }
+  </style>
 </head>
 
 <body>
   <h1>SELENIUM WEBDRIVER API</h1>
   <fieldset>
     <div class="container">
-        <legend>
-            <span class="number">0</span>XPath Tip (Text vs String)</legend>
+      <legend>
+        <span class="number">0</span>XPath Tip (Text vs String)</legend>
       <h3 id="nested">
         Hello World!
         <span> (Ignore Me) </span>
