--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -5,15 +5,60 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
   <style>
-    table,
-    th,
-    td {
-      border-radius: 3px;
-      padding: 15 15px;
-      justify-content: space-between;
-      margin-bottom: 25px;
-      border: 2px solid #95A5A6;
+    able {
+      border-spacing: 1;
       border-collapse: collapse;
+      background: white;
+      border-radius: 6px;
+      overflow: hidden;
+      max-width: 800px;
+      width: 100%;
+      margin: 0 auto;
+      position: relative;
+    }
+
+    table * {
+      position: relative;
+    }
+
+    table td,
+    table th {
+      padding-left: 8px;
+    }
+
+    table thead tr {
+      height: 60px;
+      background: #FFED86;
+      font-size: 16px;
+    }
+
+    table tbody tr {
+      height: 48px;
+      border-bottom: 1px solid #E3F1D5;
+    }
+
+    table tbody tr:last-child {
+      border: 0;
+    }
+
+    table td,
+    table th {
+      text-align: left;
+    }
+
+    table td.l,
+    table th.l {
+      text-align: right;
+    }
+
+    table td.c,
+    table th.c {
+      text-align: center;
+    }
+
+    table td.r,
+    table th.r {
+      text-align: center;
     }
 
     .figure {
