Update image alt

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -277,7 +277,7 @@
       <div class="figure">
         <img
           src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-          alt="User Avatar">
+          alt="User Avatar 01">
         <div class="figcaption">
           <h5>Name: User1</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -287,7 +287,7 @@
       <div class="figure">
         <img
           src="https://images.unsplash.com/photo-1516542076529-1ea3854896f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2551&q=80"
-          alt="User Avatar">
+          alt="User Avatar 02">
         <div class="figcaption">
           <h5>Name: User2</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -297,7 +297,7 @@
       <div class="figure">
         <img
           src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-          alt="User Avatar">
+          alt="User Avatar 07">
         <div class="figcaption">
           <h5>Name: User3</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -307,7 +307,7 @@
       <div class="figure">
         <img
           src="https://images.unsplash.com/photo-1510519138101-570d1dca3d66?ixlib=rb-1.2.1&auto=format&fit=crop&w=1331&q=80"
-          alt="User Avatar">
+          alt="User Avatar 06">
         <div class="figcaption">
           <h5>Name: User4</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -317,7 +317,7 @@
       <div class="figure">
         <img
           src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80"
-          alt="User Avatar">
+          alt="User Avatar 05">
         <div class="figcaption">
           <h5>Name: User5</h5>
           <a href="http://daominhdam.github.io">View profile</a>
@@ -330,12 +330,11 @@
     <div class="container">
       <legend>
         <span class="number">7</span>Broken Images</legend>
-      <img src="asdf.jpg" />
-      <img src="hjkl.jpg" />
-      <img src="gkjh.jpg" />
-      <img src="fjdg.jpg" />
-      <img
-        src="https://images.unsplash.com/photo-1497864149936-d3163f0c0f4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" />
+      <img src="asdf.jpg" alt="broken_04"/>
+      <img src="hjkl.jpg" alt="broken_04"/>
+      <img src="gkjh.jpg" alt="broken_04"/>
+      <img src="fjdg.jpg" alt="broken_04"/>
+      <img src="https://images.unsplash.com/photo-1497864149936-d3163f0c0f4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="broken_05"/>
     </div>
   </fieldset>
   <fieldset>
