--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -99,6 +99,13 @@
         Michael Jackson
 
       </h2>
+
+      <h3>
+
+        Michael Jackson
+
+      <span class='singer'></span>
+      </h3>
     </div>
   </fieldset>
 
@@ -330,11 +337,13 @@
     <div class="container">
       <legend>
         <span class="number">7</span>Broken Images</legend>
-      <img src="asdf.jpg" alt="broken_01"/>
-      <img src="hjkl.jpg" alt="broken_02"/>
-      <img src="gkjh.jpg" alt="broken_03"/>
-      <img src="fjdg.jpg" alt="broken_04"/>
-      <img src="https://images.unsplash.com/photo-1497864149936-d3163f0c0f4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="broken_05"/>
+      <img src="asdf.jpg" alt="broken_01" />
+      <img src="hjkl.jpg" alt="broken_02" />
+      <img src="gkjh.jpg" alt="broken_03" />
+      <img src="fjdg.jpg" alt="broken_04" />
+      <img
+        src="https://images.unsplash.com/photo-1497864149936-d3163f0c0f4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+        alt="broken_05" />
     </div>
   </fieldset>
   <fieldset>
