--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -93,14 +93,14 @@
         <span class="date"> @04:45 PM </span>
       </h3>
 
-      <h2>
+      <h2 id="second">
         <span class='singer'></span>
 
         Michael Jackson
 
       </h2>
 
-      <h3>
+      <h3 id="first">
 
         Michael Jackson
 
