--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -34,11 +34,11 @@
 
     table tbody tr {
       height: 48px;
-      border-bottom: 1px solid #E3F1D5;
+      border-bottom: 2px solid #384047;
     }
 
     table tbody tr:last-child {
-      border: 0;
+      border: 1;
     }
 
     table td,
