Add nested text

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -86,11 +86,18 @@
   <fieldset>
     <div class="container">
       <legend>
-        <span class="number">0</span>XPath Tip (Text vs String)</legend>
+        <span class="number">0</span>XPath Tip (text() | contains() | . |  string())</legend>
       <h3 id="nested">
         Hello World!
         <span> (Ignore Me) </span>
         <span class="date"> @04:45 PM </span>
+      </h3>
+
+      <h3 id="hacker">
+        I'm a Hacker
+        <span class="year"> - 18 years old </span>
+       - living in Viet Nam     
+        <span class="time">  - 15/03/2020 </span>
       </h3>
 
       <h3 id="first">
