--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="./config/js/vendor/298279967.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Automation FC Practice Sites</title>
+  <title>Automation FC Practice</title>
   <link href="./config/css/app.css" rel="stylesheet">
   <link href="./config/css/font-awesome.css" rel="stylesheet">
   <script src="./config/js/vendor/jquery-1.11.3.min.js"></script>
@@ -35,12 +35,13 @@
           padding: 0;
         }
       </style>
-      <h1 class="heading">Automation FC Practice Sites</h1>
+      <h1 class="heading">Automation FC Practice</h1>
 
       <h3>Selenium WebDriver API</h3>
       <ul>
         <li><a target="_blank" href='./basic-form/index.html'>Basic Form</a></li>
         <li><a target="_blank" href='./html5/index.html'>HTML5 Validation</a></li>
+        <li><a target="_blank" href='./qr-bar-code/index.html'>Bar Code and QR Code</a></li>
         <li><a target="_blank" href='./multiple-fields/index.html'>Multiple Fields</a></li>
         <li><a target="_blank" href='./fluent-wait/index.html'>Fluent Wait</a></li>
       </ul>
@@ -69,7 +70,8 @@
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
-      <div style="text-align: center;">Copyright by <a target="_blank" href="http://automationfc.com/">Dam Dao - AutomationFC</a></div>
+      <div style="text-align: center;">Copyright by <a target="_blank" href="http://automationfc.com/">Dam Dao -
+          AutomationFC</a></div>
     </div>
   </div>
 </body>
