--- a/qr-bar-code/index.html
+++ b/qr-bar-code/index.html
@@ -16,6 +16,12 @@
     <div class="img-container" id="bar">
         <img id="barcode" src="images/bar-code.png" />
     </div>
+    <div class="img-container" id="english">
+        <img id="english" src="images/english.png" />
+    </div>
+    <div class="img-container" id="vietnamese">
+        <img id="vietnamese" src="images/vietnamese.png" />
+    </div>
 </body>
 
 </html>
