Update id for image

--- a/qr-bar-code/index.html
+++ b/qr-bar-code/index.html
@@ -16,10 +16,10 @@
     <div class="img-container" id="bar">
         <img id="barcode" src="images/bar-code.png" />
     </div>
-    <div class="img-container" id="english">
+    <div class="img-container" id="eng">
         <img id="english" src="images/english.png" />
     </div>
-    <div class="img-container" id="vietnamese">
+    <div class="img-container" id="vi">
         <img id="vietnamese" src="images/vietnamese.png" />
     </div>
 </body>
