--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <ul>
         <li><a target="_blank" href='./basic-form/index.html'>Basic Form</a></li>
         <li><a target="_blank" href='./html5/index.html'>HTML5 Validation</a></li>
-        <li><a target="_blank" href='./qr-bar-code/index.html'>Bar Code and QR Code</a></li>
+        <li><a target="_blank" href='./qr-bar-code/index.html'>Bar Code | QR Code | OCR Text</a></li>
         <li><a target="_blank" href='./multiple-fields/index.html'>Multiple Fields</a></li>
         <li><a target="_blank" href='./fluent-wait/index.html'>Fluent Wait</a></li>
       </ul>
