Update html link

--- a/index.html
+++ b/index.html
@@ -39,30 +39,30 @@
 
       <h3>Selenium WebDriver API</h3>
       <ul>
-        <li><a target="_blank" href='./basic-form/index.html'>Basic Form</a></li>
-        <li><a target="_blank" href='./html5/index.html'>HTML5 Validation</a></li>
-        <li><a target="_blank" href='./qr-bar-code/index.html'>Bar Code | QR Code | OCR Text</a></li>
-        <li><a target="_blank" href='./multiple-fields/index.html'>Multiple Fields</a></li>
-        <li><a target="_blank" href='./fluent-wait/index.html'>Fluent Wait</a></li>
+        <li><a target="_blank" href='./basic-form'>Basic Form</a></li>
+        <li><a target="_blank" href='./html5'>HTML5 Validation</a></li>
+        <li><a target="_blank" href='./qr-bar-code'>Bar Code | QR Code | OCR Text</a></li>
+        <li><a target="_blank" href='./multiple-fields'>Multiple Fields</a></li>
+        <li><a target="_blank" href='./fluent-wait'>Fluent Wait</a></li>
       </ul>
 
       <h3>Protractor API</h3>
       <ul>
-        <li><a target="_blank" href='./protractor-calculator/index.html'>Calculator</a></li>
+        <li><a target="_blank" href='./protractor-calculator'>Calculator</a></li>
       </ul>
 
       <h3>Java HTML Report</h3>
       <ul>
-        <li><a target="_blank" href='./reportng-report/index.html'>Java - ReportNG</a></li>
-        <li><a target="_blank" href='./extent-report/index.html'>Java - Extent Report</a></li>
+        <li><a target="_blank" href='./reportng-report'>Java - ReportNG</a></li>
+        <li><a target="_blank" href='./extent-report'>Java - Extent Report</a></li>
         <li><a target="_blank" href='./cucumber-report/overview-features.html'>Java - Cucumber Report</a></li>
-        <li><a target="_blank" href='./allure-report/index.html'>Java - Allure Report</a></li>
+        <li><a target="_blank" href='./allure-report'>Java - Allure Report</a></li>
       </ul>
 
       <h3>Protractor HTML Report</h3>
       <ul>
-        <li><a target="_blank" href='./protractor-cucumber/index.html'>Protractor - Multiple Cucumber</a></li>
-        <li><a target="_blank" href='./protractor-reporter/index.html'>Protractor - Cucumber Reporter</a></li>
+        <li><a target="_blank" href='./protractor-cucumber'>Protractor - Multiple Cucumber</a></li>
+        <li><a target="_blank" href='./protractor-reporter'>Protractor - Cucumber Reporter</a></li>
       </ul>
 
     </div>
