Add drag and drop html5

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <ul>
         <li><a target="_blank" href='./basic-form'>Basic Form</a></li>
         <li><a target="_blank" href='./html5'>HTML5 Validation</a></li>
+        <li><a target="_blank" href='./drag-drop-html5/'>Drag and drop HTML5</a></li>
         <li><a target="_blank" href='./qr-bar-code'>Bar Code | QR Code | OCR Text</a></li>
         <li><a target="_blank" href='./multiple-fields'>Multiple Fields</a></li>
         <li><a target="_blank" href='./fluent-wait'>Fluent Wait</a></li>
