--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
-      <div style="text-align: center;">Copyright by <a target="_blank" href="http://automationfc.com/">Dam Dao -
+      <div style="text-align: center;">Contact <a target="_blank" href="http://automationfc.com/">Dam Dao -
           AutomationFC</a></div>
     </div>
   </div>
