--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -467,6 +467,23 @@
       </div>
   </fieldset>
 
+  <fieldset>
+    <div class="container">
+      <legend>
+        <span class="number">11</span>Submit and Reset form</legend>
+      <div id="content" class="large-12 columns">
+       
+        <form action="/basic-form/index.html" method="get">
+          <label for="fname">First name:</label>
+          <input type="text" id="fname" name="fname"><br><br>
+          <label for="lname">Last name:</label>
+          <input type="text" id="lname" name="lname"><br><br>
+          <button type="submit" value="Submit">Submit</button>
+          <button type="reset" value="Reset">Reset</button>
+        </form>
+      </div>
+  </fieldset>
+
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
