--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -473,12 +473,14 @@
         <span class="number">11</span>Submit and Reset form</legend>
       <div id="content" class="large-12 columns">
        
-        <form action="/basic-form/index.html" method="get">
-          <label for="fname">First name:</label>
-          <input type="text" id="fname" name="fname"><br><br>
-          <label for="lname">Last name:</label>
-          <input type="text" id="lname" name="lname"><br><br>
-          <button type="submit" value="Submit">Submit</button>
+        <form method="get">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required><br><br>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"><br><br>
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" required><br><br>
+          <button type="submit" value="Submit">Submit
           <button type="reset" value="Reset">Reset</button>
         </form>
       </div>
