--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -379,7 +379,7 @@
 
       <div class="figure">
         <img
-          src="/basic-form/image/05.jfif"
+          src="/basic-form/image/05.png"
           alt="User Avatar 05">
         <div class="figcaption">
           <h5>Name: User5</h5>
