Add text (Enter)

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -114,6 +114,10 @@
 
       </h5>
 
+      <h5 id="third">
+        Michael Jackson
+      </h5>
+
       <h5>
         <span class='concat'>Hello "John", What's happened?</span>
       </h5>
