Update Css for JotForm

--- a/multiple-fields/index.html
+++ b/multiple-fields/index.html
@@ -7,11 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <meta name="HandheldFriendly" content="true" />
   <title>JotForm</title>
-  <link href="https://cdn.jotfor.ms/static/formCss.css?3.3.7108" rel="stylesheet" type="text/css" />
-  <link type="text/css" media="print" rel="stylesheet" href="https://cdn.jotfor.ms/css/printForm.css?3.3.7108" />
-  <link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/css/styles/nova.css?3.3.7108" />
-  <link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/themes/CSS/566a91c2977cdfcd478b4567.css?themeRevisionID=59fb4852cf3bfe589c6c6f21"
-  />
+  <link type="text/css" rel="stylesheet" href="css/formCss.css" />
+  <link type="text/css" media="print" rel="stylesheet" href="css/printForm.css" />
+  <link type="text/css" rel="stylesheet" href="css/nova.css" />
+  <link type="text/css" rel="stylesheet" href="css/themes.css"/>
+
+  <link rel="stylesheet" href="css/main.css">
+
   <style type="text/css">
     .form-label-left {
       width: 150px;
