Add js to JotForm

--- a/multiple-fields/index.html
+++ b/multiple-fields/index.html
@@ -199,8 +199,8 @@
     /* Injected CSS Code */
   </style>
 
-  <script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
-  <script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.7108" type="text/javascript"></script>
+  <script src="js/prototype.forms.js" type="text/javascript"></script>
+  <script src="js/jotform.forms.js" type="text/javascript"></script>
   <script type="text/javascript">
     JotForm.init(function () {
       setTimeout(function () {
