--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
       <ul>
         <li><a target="_blank" href='./basic-form'>Basic Form</a></li>
         <li><a target="_blank" href='./html5'>HTML5 Validation</a></li>
-        <li><a target="_blank" href='./drag-drop-html5/'>Drag and drop HTML5</a></li>
         <li><a target="_blank" href='./qr-bar-code'>Bar Code | QR Code | OCR Text</a></li>
         <li><a target="_blank" href='./multiple-fields'>Multiple Fields</a></li>
         <li><a target="_blank" href='./fluent-wait'>Fluent Wait</a></li>
         <li><a target="_blank" href='./jquery-selectable/selectable/display-grid.html'>JQuery Selectable</a></li>
+        <li><a target="_blank" href='./drag-drop-html5/'>Drag & drop HTML5</a></li>
+        <li><a target="_blank" href='./kendo-drag-drop/'>Drag & drop Kendo UI</a></li>
       </ul>
 
       <h3>Protractor API</h3>
