--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <li><a target="_blank" href='./qr-bar-code'>Bar Code | QR Code | OCR Text</a></li>
         <li><a target="_blank" href='./multiple-fields'>Multiple Fields</a></li>
         <li><a target="_blank" href='./fluent-wait'>Fluent Wait</a></li>
-        <li><a target="_blank" href='./jquery-selectable/selectable/display-grid.html'>JQuery Selectable</a></li>
+        <li><a target="_blank" href='./jquery-selectable/'>JQuery Selectable</a></li>
+        <li><a target="_blank" href='./jquery-tooltip//'>JQuery Tooltip</a></li>
         <li><a target="_blank" href='./drag-drop-html5/'>Drag & drop HTML5</a></li>
         <li><a target="_blank" href='./kendo-drag-drop/'>Drag & drop Kendo UI</a></li>
       </ul>
@@ -78,5 +79,4 @@
     </div>
   </div>
 </body>
-
 </html>
