Add dynamic loading

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <li><a target="_blank" href='./qr-bar-code'>Bar Code | QR Code | OCR Text</a></li>
         <li><a target="_blank" href='./multiple-fields'>Multiple Fields</a></li>
         <li><a target="_blank" href='./fluent-wait'>Fluent Wait</a></li>
+        <li><a target="_blank" href='./dynamic-loading/'>Dynamic loading</a></li>
       </ul>
 
       <h3>Protractor API</h3>
