--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -257,6 +257,8 @@
       <button id="button-disabled" disabled="disabled">Button is disabled</button>
       <br>
       <button id="button-enabled" onclick="window.location.href='http://automationfc.com'">Button is enabled</button>
+      <br>
+      <button id="button-print" onclick="window.print()">Print this Page</button>
     </div>
   </fieldset>
 
