Add number textbox

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -160,6 +160,9 @@
       <label for="password">Password:</label>
       <input disabled="disabled" placeholder="Textbox is disabled" type="password" id="password" name="user_pass">
 
+      <label for="password">Number:</label>
+      <input type="number" id="number" name="number">
+
       <label>Age:</label>
       <input type="radio" id="under_18" value="under_18" name="user_age">
       <label for="under_18" class="light">Under 18</label>
