--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -482,14 +482,16 @@
         <span class="number">11</span>Submit and Reset form</legend>
       <div id="content" class="large-12 columns">
        
-        <form method="get">
+        <form method="get" id="login-form">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required><br><br>
+          <label for="address">Address:</label>
+          <textarea id="address" name="address"></textarea>
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" required pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"><br><br>
           <label for="password">Password:</label>
           <input type="password" id="password" name="password" required><br><br>
-          <button type="submit" value="Submit">Submit
+          <button type="submit" value="Submit">Submit</button>
           <button type="reset" value="Reset">Reset</button>
         </form>
       </div>
