Update field name

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -158,7 +158,7 @@
       <input type="email" id="mail" name="user_email">
 
       <label for="password">Password:</label>
-      <input disabled="disabled" placeholder="Textbox is disabled" type="password" id="password" name="user_pass">
+      <input disabled="disabled" placeholder="Textbox is disabled" type="password" id="disable_password" name="disable_password">
 
       <label for="password">Number:</label>
       <input type="number" id="number" name="number">
