--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -117,6 +117,13 @@
       <h5 id="third">
         Michael Jackson
       </h5>
+      
+      <h5 id="forth">Mail Personal or Business Check, Cashier's Check or money order to:
+
+        NOP SOLUTIONS
+        your address here,
+        New York, NY 10001
+        USA</h5>
 
       <h5>
         <span class='concat'>Hello "John", What's happened?</span>
