--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -118,12 +118,19 @@
         Michael Jackson
       </h5>
       
-      <h5 id="forth">Mail Personal or Business Check, Cashier's Check or money order to:
-
-        NOP SOLUTIONS
-        your address here,
-        New York, NY 10001
-        USA</h5>
+      <h5 id="forth">
+        <p>Mail Personal or Business Check, Cashier's Check or money order to:</p>
+        <p>
+          <br>
+          <b>NOP SOLUTIONS</b>
+          <br>
+          <b>your address here,</b>
+          <br>
+          <b>New York, NY 10001</b>
+          <br>
+          <b>USA</b>
+        </p>
+      </h5>
 
       <h5>
         <span class='concat'>Hello "John", What's happened?</span>
