--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -125,11 +125,11 @@
           <br>
           <b>your address here,</b>
           <br>
-          <b>New York, NY 10001 </b>
+          <b>New York, NY 10001&nbsp;</b>
           <br>
           <b>USA</b>
         </p>
-        <p>Notice that if you pay by Personal or Business Check, your order may be held for up to 10 days after we receive your check to allow enough time for the check to clear.  If you want us to ship faster upon receipt of your payment, then we recommend your send a money order or Cashier's check.</p>
+        <p>Notice that if you pay by Personal or Business Check, your order may be held for up to 10 days after we receive your check to allow enough time for the check to clear. &nbsp;If you want us to ship faster upon receipt of your payment, then we recommend your send a money order or Cashier's check.</p>
         <p>P.S. You can edit this text from admin panel.</p>
       </h5>
 
