Update basic form

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -100,24 +100,32 @@
         <span class="time"> - 15/03/2020 </span>
       </h5>
 
-      <h5 id="first">
+      <h5 id="one">
 
         Michael Jackson
 
         <span class='singer'></span>
       </h5>
-
-      <h5 id="second">
+      <h5 id="two">
         <span class='singer'></span>
 
         Michael Jackson
 
       </h5>
 
-      <h5 id="third">
+      <h5 id="three">
         Michael Jackson
       </h5>
-      <h5 id="forth">
+
+      <h5 id="four">Michael Jackson<span class='singer'></span>
+      </h5>
+
+      <h5 id="five">
+      <span class='singer'></span>Michael Jackson</h5>
+
+      <h5 id="six">Michael Jackson</h5>
+
+      <h5 id="seven">
         <p>Mail Personal or Business Check, Cashier's Check or money order to:</p>
         <p>
           <br>
