--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -122,10 +122,13 @@
 
       <h5 id="five">
       <span class='singer'></span>Michael Jackson</h5>
+      
+      <h5 id="six">
+      <span class='singer'></span>Michael Jackson<span class='dentist'></span></h5>
 
-      <h5 id="six">Michael Jackson</h5>
+      <h5 id="seven">Michael Jackson</h5>
 
-      <h5 id="seven">
+      <h5 id="eight">
         <p>Mail Personal or Business Check, Cashier's Check or money order to:</p>
         <p>
           <br>
