Text in child node

--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -127,8 +127,11 @@
       <span class='singer'></span>Michael Jackson<span class='dentist'></span></h5>
 
       <h5 id="seven">Michael Jackson</h5>
+      
+       <h5 id="eight">
+      <span class='singer'>Michael Jackson</span></h5>
 
-      <h5 id="eight">
+      <h5 id="nine">
         <p>Mail Personal or Business Check, Cashier's Check or money order to:</p>
         <p>
           <br>
