--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SELENIUM WEBDRIVER FORM DEMO</title>
+  <title>Selenium WebDriver</title>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
   <style>
