--- a/basic-form/index.html
+++ b/basic-form/index.html
@@ -82,7 +82,7 @@
 </head>
 
 <body>
-  <h1>SELENIUM WEBDRIVER API</h1>
+  <h1>Selenium WebDriver API</h1>
   <fieldset>
     <div class="container">
       <legend>
