--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <li><a target="_blank" href='./jquery-tooltip//'>JQuery Tooltip</a></li>
         <li><a target="_blank" href='./drag-drop-html5/'>Drag & drop HTML5</a></li>
         <li><a target="_blank" href='./kendo-drag-drop/'>Drag & drop Kendo UI</a></li>
+        <li><a target="_blank" href='./svg-element/'>SVG Element</a></li>
       </ul>
 
       <h3>Protractor API</h3>
