--- a/jquery-selectable/index.html
+++ b/jquery-selectable/index.html
@@ -37,6 +37,14 @@
 	<li class="ui-state-default">10</li>
 	<li class="ui-state-default">11</li>
 	<li class="ui-state-default">12</li>
+	<li class="ui-state-default">13</li>
+	<li class="ui-state-default">14</li>
+	<li class="ui-state-default">15</li>
+	<li class="ui-state-default">16</li>
+	<li class="ui-state-default">17</li>
+	<li class="ui-state-default">18</li>
+	<li class="ui-state-default">19</li>
+	<li class="ui-state-default">20</li>	
 </ol>
 
 
