--- a/jquery-selectable/index.html
+++ b/jquery-selectable/index.html
@@ -9,11 +9,29 @@
 
 	<style>
 	#feedback { font-size: 1.4em; }
-	#selectable .ui-selecting { background: #FECA40; }
-	#selectable .ui-selected { background: #F39814; color: white; }
-	#selectable { list-style-type: none; margin: 0; padding: 0; width: 450px; }
-	#selectable li { margin: 3px; padding: 1px; float: left; width: 100px; height: 80px; font-size: 4em; text-align: center; }
+	#selectable .ui-selecting { 
+		background: #FECA40; 
+	}
+	#selectable .ui-selected { 
+		background: #F39814; 
+		color: white; 
+	}
+	#selectable { 
+		list-style-type: none; 
+		margin: 0; 
+		padding: 0; 
+		width: 450px; }
+	#selectable li { 
+		margin: 3px; 
+		padding: 1px; 
+		float: left; 
+		width: 100px; 
+		height: 80px; 
+		font-size: 4em; 
+		text-align: center; 
+	}
 	</style>
+
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script>
