--- a/shadow-dom/index.html
+++ b/shadow-dom/index.html
@@ -13,7 +13,7 @@
       shadowRoot.innerHTML = `
               <span class="wrapper" id="shadow_content"><span class="info">some text</span></span>
               <div id="nested_shadow_host"></div>
-              <a href="scroll.html">scroll.html</a>
+              <a href="scroll.html">nested scroll.html</a>
               <input type="text" />
               <input type="checkbox" />
               <input type="file" />
