--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <li><a target="_blank" href='./kendo-drag-drop/'>Drag & drop Kendo UI</a></li>
         <li><a target="_blank" href='./svg-element/'>SVG Element</a></li>
         <li><a target="_blank" href='./shadow-dom/'>Shadow DOM</a></li>
+        <li><a target="_blank" href='./css-dinner/'>Css Dinner</a></li>
+        <li><a target="_blank" href='./xpath-dinner/'>XPath Dinner</a></li>
       </ul>
 
       <h3>Protractor API</h3>
