--- a/xpath-dinner/index.html
+++ b/xpath-dinner/index.html
@@ -1,27 +1,28 @@
+---
+title: Xpath game
+permalink: /xpath/
+---
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>Xpath Diner - Where we feast on Xpath Selectors!</title>
-    <!-- Insert this line above script imports  -->
-    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+    <script src="../xpath-diner/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../xpath-diner/js/levels.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../xpath-diner/js/restaurant.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../xpath-diner/js/jquery.mCustomScrollbar.min.js"></script>
 
-    <script src="js/jquery.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/levels.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/restaurant.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/jquery.mCustomScrollbar.min.js"></script>
-   
-    <!-- Insert this line after script imports -->
-    <script>if (window.module) module = window.module;</script>
-
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="../xpath-diner/favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Exo+2:200,400,600,400italic,600italic' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
-    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" type="text/css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../xpath-diner/css/jquery.mCustomScrollbar.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../xpath-diner/css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
+    <meta property="og:url"           content="http://xpath.topswagcode.com" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="CSS Diner" />
-    <meta property="og:description"   content="A fun game to help you learn and practice CSS selectors." />
+    <meta property="og:title"         content="Xpath Diner" />
+    <meta property="og:description"   content="A fun game to help you learn and practice Xpath selectors." />
+    <meta property="og:image"         content="https://flukeout.github.io/images/fb-share.jpg" />
   </head>
 
   <body>
@@ -32,6 +33,12 @@
         <div class="logo">
           <plate><apple /></plate>
         </div>
+        <span class="share-menu">
+          Share
+          <a class="share-twitter" type="twitter" href="#"></a>
+          <a class="share-facebook" type="facebook" href="#"></a>
+          <a class="share-email" type="email" href="#"></a>
+        </span>
       </header>
 
       <h2 class="order"></h2>
@@ -60,7 +67,6 @@
         </p>
         <p>
           Get help with selectors on the right! &rarr;
-        </p>lectors on the right! &rarr;
         </p>
         <a class="note-toggle" href="#">Ok, got it!</a>
       </div>
@@ -117,16 +123,10 @@
 
       <div class="what-is-this">
         <p>
-          Originally Made by <a href="http://www.twitter.com/flukeout">@flukeout</a> &mdash; come say hi!
+          Made by <a href="http://www.topswagcode.com">TopSwagCode</a> &mdash; come say hi!
         </p>
         <p>
-          Ported to Electron by <a href="http://www.topswagcode.com/">TopSwagCode</a>
-        </p>
-        <p>
-          Have feedback or questions to the core game?<br/> Please file an isssue on <a href="https://github.com/flukeout/css-diner/issues">the Github repo</a>.
-        </p>
-        <p>
-          Electron app feedback or question?<br/> Please file an issue on <a href="https://github.com/kiksen1987/css-diner-electron/issues">the Github repo</a>.
+          Have feedback or questions? Please file an isssue on <a href="https://github.com/kiksen1987/xpath-diner/issues">the Github repo</a>.
         </p>
       </div>
 
@@ -173,29 +173,18 @@
     </div><!-- /right-col -->
 
   <script>
-
-    // Small script that makes external links open in browser instead of electron window.
-    const shell = require('electron').shell;
-    $(document).on('click', 'a[href^="http"]', function(event) {
-        event.preventDefault();
-        shell.openExternal(this.href);
-    });
-    /*
-    Removed tracking from Electron app.
-
     if(location.hostname != "localhost"){
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-62998410-1', 'auto');
-      ga('send', 'pageview');
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-73730823-1', 'auto');
+        ga('send', 'pageview');
     } else {
       var ga = false;
     }
-    */
   </script>
 
   </body>
 </html>
+
