XPath Dinner Path

--- a/xpath-dinner/index.html
+++ b/xpath-dinner/index.html
@@ -1,44 +1,32 @@
----
-title: Xpath game
-permalink: /xpath/
----
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>Xpath Diner - Where we feast on Xpath Selectors!</title>
-    <script src="../xpath-diner/js/jquery.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../xpath-diner/js/levels.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../xpath-diner/js/restaurant.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../xpath-diner/js/jquery.mCustomScrollbar.min.js"></script>
+    <script src="../xpath-dinner/js/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../xpath-dinner/js/levels.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../xpath-dinner/js/restaurant.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../xpath-dinner/js/jquery.mCustomScrollbar.min.js"></script>
 
-    <link rel="icon" type="image/png" href="../xpath-diner/favicon.png">
+    <link rel="icon" type="image/png" href="../xpath-dinner/favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Exo+2:200,400,600,400italic,600italic' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
-    <link rel="stylesheet" href="../xpath-diner/css/jquery.mCustomScrollbar.css" type="text/css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="../xpath-diner/css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../xpath-dinner/css/jquery.mCustomScrollbar.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../xpath-dinner/css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
-    <meta property="og:url"           content="http://xpath.topswagcode.com" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Xpath Diner" />
+    <meta property="og:title"         content="Xpath Dinner" />
     <meta property="og:description"   content="A fun game to help you learn and practice Xpath selectors." />
-    <meta property="og:image"         content="https://flukeout.github.io/images/fb-share.jpg" />
   </head>
 
   <body>
     <div class="left-col">
 
       <header>
-        Xpath Diner
+        Xpath Dinner
         <div class="logo">
           <plate><apple /></plate>
         </div>
-        <span class="share-menu">
-          Share
-          <a class="share-twitter" type="twitter" href="#"></a>
-          <a class="share-facebook" type="facebook" href="#"></a>
-          <a class="share-email" type="email" href="#"></a>
-        </span>
+        
       </header>
 
       <h2 class="order"></h2>
@@ -120,17 +108,6 @@ permalink: /xpath/
           </div>
         </div>
       </div>
-
-      <div class="what-is-this">
-        <p>
-          Made by <a href="http://www.topswagcode.com">TopSwagCode</a> &mdash; come say hi!
-        </p>
-        <p>
-          Have feedback or questions? Please file an isssue on <a href="https://github.com/kiksen1987/xpath-diner/issues">the Github repo</a>.
-        </p>
-      </div>
-
-      <div class="helper"><!-- This is the popup that floats over table elements --></div>
 
     </div><!-- /left-col -->
 
